--- a/promiseui/styles/_colors.scss
+++ b/promiseui/styles/_colors.scss
@@ -35,3 +35,5 @@ $disabled-bg: var(--promiseui-disabled-bg, #f6f6f6);
 $disabled-line: var(--promiseui-disabled-line, #dfe1e6);
 $disabled-text: var(--promiseui-disabled-text, #cbcacb);
 $placeholder: var(--promiseui-placeholder, #babbc0);
+$scrollbar-color: var(--promiseui-scrollbar-color, rgba(0, 0, 0, 0.25));
+$scrollbar-color-hover: var(--promiseui-scrollbar-color-hover, rgba(0, 0, 0, 0.4));
